--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Xiaoran's Site"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -21,14 +21,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "Jason Jia.jpg"
+  name             : "Xiaoran (Jason) Jia"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  bio              : "Assistant Professor (Research, Tenure Track)"
+  location         : "Waterloo, ON"
+  employer         : "Lazaridis School of Business and Economics, Wilfrid Laurier University"
+  uri              : https://www.wlu.ca/academics/faculties/lazaridis-school-of-business-and-economics/faculty-profiles/xiaoran-jason-jia/index.html 
+  email            : "xjia@wlu.ca" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
